--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -44,6 +44,10 @@
     display: none !important;
 }
 
+.z-5 {
+    z-index: 5 !important;
+}
+
 .d-block {
     display: block !important;
 }
